<resources>
    <string name="app_name">知乎日报</string>
    <string name="login">请登录</string>
    <string name="collection">我的收藏</string>
    <string name="download">离线下载</string>
    <string name="first_page">首页</string>
    <string name="settings">设置</string>
    <string name="night_mode">夜间模式</string>
    <string name="hint">提示</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="editor">主编</string>
    <string name="comments">评论</string>
    <string name="thumb">赞</string>
    <string name="thumb_count">赞的数量</string>
    <string name="comments_count">评论的数量</string>
</resources>
