<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/item_collection"
        android:title="@string/collection"
        android:icon="@drawable/ic_star_black_24dp"
        app:showAsAction="always"/>
    <item android:id="@+id/item_share"
          android:title="@string/app_name"
          android:icon="@drawable/ic_share_black_24dp"
          app:showAsAction="always"/>
    <item android:id="@+id/item_chat"
        android:title="@string/comments"
        android:icon="@drawable/ic_chat_black_24dp"
        app:showAsAction="always|withText"/>
    <item android:id="@+id/item_thumb"
        android:title="@string/thumb"
        android:icon="@drawable/ic_thumb_up_black_24dp"
        app:showAsAction="always|withText"/>
</menu>